
  * debuild:
    + Properly quote shell variable when parsing options.  (Closes: #556248)
    + Don't treat “-nc” as implying binary only build.  (Closes: #607303)
    + Add recognition of dpkg-buildpackage's “-A” option for building only
      binary independent packages.
  * pts-subscribe: Handle “--until 0” the same as “--forever”.  (Closes:
    #604740)
  * uscan: Update documentation to use “.+” instead of “.*” in groupings.
    Thanks to Ben Finney for the patch.  (Closes: #606060)
  * debcheckout: Use the correct prototype for set_destdir.  (Closes: #606053)

 -- James Vega <jamessan@debian.org>  Thu, 02 Dec 2010 20:27:34 -0500

devscripts (2.10.69) unstable; urgency=low

  [ James Vega ]
  * po4a: Add targets to transform translated POD/DocBook files into man
    pages.  (Closes: #597782)
  * Include command list in localized devscripts.1.  (Closes: #597906)
  * Fix a couple markup issues in source files for generated man pages.
  * bts: Don't send an empty email when --no-action is given.  (Closes:
    #600822)

  [ David Prévot ]
  * Update French translation.  (Closes: #599234, #600033)

  [ Patrick Schoenfeld ]
  * Replace occurences of old FSF address with the FSF recommendation
    what should be written inside of source files.
    (Closes: #502512) 

 -- James Vega <jamessan@debian.org>  Thu, 21 Oct 2010 07:36:42 -0400

devscripts (2.10.68) unstable; urgency=low

  [ James Vega ]
  * dget: Fix parsing of apt-cache and sources.list when given only a package
    name.  (Closes: #594904)
  * debchange:
    + Remove EOL Ubuntu release Intrepid.  Add new development release Natty.
      (Closes: #593659)
    + Remove Etch and add Squeeze as backports targets.  Lenny is still the
      default bpo target.
  * rmadison: Change Backports URL to backports.debian.org. (Closes: #595714)

  [ Luk Claes ]
  * Adjust rmadison documentation for move of accessible projectb mirror
    from merkel to ries.
