@@ -7,8 +7,11 @@ devscripts (2.10.70) UNRELEASED; urgency=low
       binary independent packages.
   * pts-subscribe: Handle “--until 0” the same as “--forever”.  (Closes:
     #604740)
-  * uscan: Update documentation to use “.+” instead of “.*” in groupings.
-    Thanks to Ben Finney for the patch.  (Closes: #606060)
+  * uscan:
+    + Update documentation to use “.+” instead of “.*” in groupings.  Thanks
+      to Ben Finney for the patch.  (Closes: #606060)
+    + Add “target” element to --dehs' XML, specifying the name of the
+      downloaded file.  (Closes: #598514)
   * debcheckout: Use the correct prototype for set_destdir.  (Closes: #606053)
 
  -- James Vega <jamessan@debian.org>  Thu, 02 Dec 2010 20:27:34 -0500
